# ncvm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ncvm/: cli.py  config.py
ncvm/commands/: doctor.py  maintenance.py  php_fpm.py  restart.py  status.py  update.py
ncvm/core/: bash.py  embedded_scripts.py  occ.py  runner.py  systemd.py
ncvm/scripts/: n.sh  pp.sh
ncvm/services/: __init__.py  apache.py  apt.py  nc_upgrade.py  occ.py  php.py  redis.py  systemd.py  update_service.py
